--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
 Django==3.0.5
-pytz==2019.3
-sqlparse==0.3.1
 feedparser==5.2.1
+gunicorn==20.0.4
+idna==2.9
+pytz==2019.3
+requests==2.23.0
+sqlparse==0.3.1
+urllib3==1.25.9
